# mi-peft

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: experiment.yaml
scripts/: activation_patching_test.py  minimal_pair_test_script.py  model_loading.py  model_loading_test.py
src/analysis/: scoring.py  visualization.py
src/data/: minimal_pair_gen.py
src/masks/: protection_mask.py
src/patching/: activation_patching.py
